fix: replace isModified by native publishState of Sulu

--- a/templates/components/_builder_sulu_navbar.html.twig
+++ b/templates/components/_builder_sulu_navbar.html.twig
@@ -5,7 +5,7 @@
 			<i class="fa fa-save"></i>
 			{{ 'grapesjs.buttons.save'|trans({}, 'grapesjs') }}
 		</button>
-		<button id="publish" {% if not is_modified %} disabled {% endif %}>
+		<button id="publish" {% if publish_state %} disabled {% endif %}>
 			<i class="fa fa-save"></i>
 			{{ 'grapesjs.buttons.publish'|trans({}, 'grapesjs') }}
 		</button>
